fixed spelling mistake

--- a/adult-female-literacy-dc/adult-female-literacy-dc.ipynb
+++ b/adult-female-literacy-dc/adult-female-literacy-dc.ipynb
@@ -4732,7 +4732,7 @@
     "for row in range(0,len(final_df[\"Country Code\"])):\n",
     "    code_to_name += f\"{final_df['Country Code'][row]}: {final_df['Country Name'][row]}\\n\"\n",
     "   \n",
-    "print(code_to_name) # need to use print commans, otherwise it'll put everything on one line"
+    "print(code_to_name) # need to use print command, otherwise it'll put everything on one line"
    ]
   },
   {
