--- a/share_of_education_in_gvtexp.ipynb
+++ b/share_of_education_in_gvtexp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7581638f",
+   "id": "fc9af956",
    "metadata": {},
    "source": [
     "# Share of education in government expenditure\n",
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "87b85521",
+   "id": "69518182",
    "metadata": {},
    "source": [
     "## Data source\n",
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c327ca39",
+   "id": "113e4b79",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "a98399ce",
+   "id": "6d7d68e8",
    "metadata": {
     "scrolled": true
    },
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "413e8ca5",
+   "id": "c51a0d40",
    "metadata": {},
    "source": [
     "## Let's see what this data looks like "
@@ -207,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "92dd2cd9",
+   "id": "76d1d361",
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "315d56ef",
+   "id": "2e91d5c8",
    "metadata": {},
    "source": [
     "This dataframe has 3534 rows and 4 columns"
@@ -236,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "1a52b032",
+   "id": "506ceef7",
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b688bc4",
+   "id": "78f42f67",
    "metadata": {},
    "source": [
     "The earliest year in this dataset is 1980"
@@ -265,7 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "35aec384",
+   "id": "52c4adaf",
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "71394f10",
+   "id": "cee20116",
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "78966cfc",
+   "id": "0fda21dc",
    "metadata": {},
    "source": [
     "## Renaming columns \n",
@@ -323,7 +323,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "84a972ff",
+   "id": "1a4f3ede",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f212e37e",
+   "id": "34392aa6",
    "metadata": {},
    "source": [
     "Let's check the column names now"
@@ -342,7 +342,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "75992a2d",
+   "id": "000bc3be",
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41d6bc6a",
+   "id": "7ec7064f",
    "metadata": {},
    "source": [
     "Let's create a copy of the filtered table in case we want to go back to the original"
@@ -371,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "8552bbc1",
+   "id": "5bc30914",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0675a9e7",
+   "id": "603f23fb",
    "metadata": {},
    "source": [
     "Since we have already identified the countries with the 5 highest and lowest highest literacy rates, we can filter those countries "
@@ -389,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "8f2fbd6e",
+   "id": "aadd9c43",
    "metadata": {
     "scrolled": true
    },
@@ -535,7 +535,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f064f04",
+   "id": "ecf88082",
    "metadata": {},
    "source": [
     "Let's check to see if our data has all of the countries that we are looking for"
@@ -543,130 +543,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "27052da5",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Country</th>\n",
-       "      <th>Country_Presence</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Afghanistan</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Afghanistan</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Afghanistan</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Afghanistan</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Afghanistan</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>157</th>\n",
-       "      <td>Niger</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>158</th>\n",
-       "      <td>Niger</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>159</th>\n",
-       "      <td>Niger</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>160</th>\n",
-       "      <td>Niger</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>161</th>\n",
-       "      <td>Niger</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>162 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         Country  Country_Presence\n",
-       "0    Afghanistan              True\n",
-       "1    Afghanistan              True\n",
-       "2    Afghanistan              True\n",
-       "3    Afghanistan              True\n",
-       "4    Afghanistan              True\n",
-       "..           ...               ...\n",
-       "157        Niger              True\n",
-       "158        Niger              True\n",
-       "159        Niger              True\n",
-       "160        Niger              True\n",
-       "161        Niger              True\n",
-       "\n",
-       "[162 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": 32,
+   "id": "f90844e3",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
    "source": [
-    "# Check if countries are in the column\n",
-    "filtered_df['Country_Presence'] = filtered_df['Country'].isin(countries)\n",
-    "\n",
-    "# Display the country names and their presence\n",
-    "country_presence = filtered_df.loc[:, ['Country', 'Country_Presence']]\n",
-    "country_presence"
+    "unique_countries = filtered_df['Country'].unique()\n",
+    "print(\"Unique countries:\", unique_countries)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "4d359cbc",
+   "id": "f731d8d6",
+   "metadata": {},
+   "source": [
+    "We can see that Cuba and Korea are missing from the dataset, so we'll have to add those in later"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "226a24f8",
+   "metadata": {},
+   "source": [
+    "### Looking at our filtered dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2a5abdc7",
    "metadata": {},
    "source": [
     "By looking at the .min() of the data we can see that the data starts from 1991"
@@ -675,7 +581,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "3df4d5f6",
+   "id": "f6e11b04",
    "metadata": {},
    "outputs": [
     {
@@ -695,7 +601,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f4b23a5",
+   "id": "4e6952be",
    "metadata": {},
    "source": [
     "Since we are only looking at data from 2000 - 2021, we'll need to get rid of any rows from 1997 to 1999"
@@ -704,7 +610,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "056c45f3",
+   "id": "d1c2953c",
    "metadata": {},
    "outputs": [
     {
@@ -859,7 +765,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "695fff8a",
+   "id": "7b0978e7",
    "metadata": {},
    "source": [
     "Let's check to see what year the dataset now starts from"
@@ -868,7 +774,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "3994a46c",
+   "id": "ff2ca751",
    "metadata": {},
    "outputs": [
     {
@@ -888,7 +794,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab7ada26",
+   "id": "ea198f8c",
    "metadata": {},
    "source": [
     "Not all of the countries in our chosen 10 have the same year range, so we'll have to see what the time span is for each country "
@@ -897,7 +803,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "576aa559",
+   "id": "a54beb41",
    "metadata": {},
    "outputs": [
     {
@@ -927,7 +833,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7232c960",
+   "id": "f66c2408",
    "metadata": {},
    "source": [
     "The highest amount of years is 20 and the lowest is 11, this is not too much of a range, so we can proceed"
@@ -935,7 +841,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fba30aee",
+   "id": "9f9a9d78",
    "metadata": {},
    "source": [
     "### Finding the mean of each country "
@@ -944,7 +850,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "cb28df09",
+   "id": "628e203d",
    "metadata": {},
    "outputs": [
     {
@@ -976,7 +882,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e9a7df8f",
+   "id": "947e4de6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -984,7 +890,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a2ae0e69",
+   "id": "9220de1a",
    "metadata": {},
    "outputs": [],
    "source": []
