--- a/adult-female-literacy-dc.ipynb
+++ b/adult-female-literacy-dc.ipynb
@@ -3607,10 +3607,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Some countries such as Timor-Leste and Zambia have a high dispersal of data, however other countries such as Belize and Guyana have values that are not very dispersed. <br>\n",
+    "Some countries such as Timor-Leste and Zambia have a high dispersal of data, however other countries such as Belgium and Liberia have values that are not very dispersed. <br>\n",
     "The dispersal of values varies a lot per country <br>\n",
     "Little countries are right-skewed; where there is skewness, most countries are left-skewed.<br>\n",
-    "Lots of countries such as Cuba and the United Arab Emirates are not skewed as they have a relatively symmetrical distribution.<br>\n",
+    "Lots of countries are not skewed as they have a relatively symmetrical distribution.<br>\n",
     "Considering that the dataset has a large amount of values and that there are a lot of countries within the dataset, there doesn't appear to be that many outliers. <br>\n",
     "Adult female literacy rate values vary considerably between countries. \n"
    ]
