--- a/Regression_results_Lilia/Regression_results.ipynb
+++ b/Regression_results_Lilia/Regression_results.ipynb
@@ -1,8 +1,69 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "fadd21c4",
+   "metadata": {},
+   "source": [
+    "# Running regression on Mean Adult Female Literacy Rate"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c6f01ea9",
+   "metadata": {},
+   "source": [
+    "## Plan of Action"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1f64e25f",
+   "metadata": {},
+   "source": [
+    "- Declare dependent and independent variables\n",
+    "- Make all variables numeric\n",
+    "- If non-numeric variable is used, make it a dummy variable\n",
+    "- Run a regression\n",
+    "- Interpret the results\n",
+    "- Visualize"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7775af2c",
+   "metadata": {},
+   "source": [
+    "## Data used"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9c7d8f97",
+   "metadata": {},
+   "source": [
+    "The final dataset is available in a csv file name \"final\"."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "53006cfa",
+   "metadata": {},
+   "source": [
+    "## Data Exploration"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "266320b6",
+   "metadata": {},
+   "source": [
+    "First, import the packages:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 2,
    "id": "4bd6f8bb",
    "metadata": {},
    "outputs": [],
@@ -14,8 +75,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "85fea792",
+   "metadata": {},
+   "source": [
+    "Turn off any warnings appearing during the analysis."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 3,
    "id": "eb4e8917",
    "metadata": {},
    "outputs": [],
@@ -24,8 +93,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "53cabf0c",
+   "metadata": {},
+   "source": [
+    "Read the dataset into a new variable df."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 4,
    "id": "e3131b44",
    "metadata": {
     "scrolled": true
@@ -227,19 +304,27 @@
        "9  2.931000  "
       ]
      },
-     "execution_count": 66,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv('/Users/liliamn/Desktop/final.csv')\n",
+    "df = pd.read_csv('final.csv')\n",
     "df"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b3ae3c20",
+   "metadata": {},
+   "source": [
+    "Declare the dependent and independent variables in our model."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 5,
    "id": "f88f79b2",
    "metadata": {},
    "outputs": [],
@@ -249,30 +334,62 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 68,
-   "id": "e24d554b",
+   "cell_type": "markdown",
+   "id": "6be1a481",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Drop rows with missing values in any of the selected columns\n",
-    "df_selected = df[[dependent_variable] + independent_variables].dropna()"
+    "Drop rows with missing values in any of the selected columns."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 6,
+   "id": "e24d554b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_selected = df[[dependent_variable] + independent_variables].dropna()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "218ea05f",
+   "metadata": {},
+   "source": [
+    "Make the dependent variable numeric."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "76904eeb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_selected[dependent_variable] = pd.to_numeric(df_selected[dependent_variable])\n",
+    "df_selected[dependent_variable] = pd.to_numeric(df_selected[dependent_variable])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bb5a47f6",
+   "metadata": {},
+   "source": [
+    "As we see in the dataset, the column \"Income level\" is categorical. We then change it to a dummy variable and divide into two columns as there are three categories. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "794bf601",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "df_selected['Income Level'] = df_selected['Income Level'].astype('category')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 10,
    "id": "a334bf9e",
    "metadata": {},
    "outputs": [
@@ -438,7 +555,7 @@
        "9                        1                                 0  "
       ]
      },
-     "execution_count": 70,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,22 +566,36 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 71,
-   "id": "3c503a89",
+   "cell_type": "markdown",
+   "id": "3398afe9",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Define the dependent variable\n",
-    "y = df_encoded[dependent_variable]\n",
-    "\n",
-    "# Add a constant column for the intercept term\n",
-    "X = sm.add_constant(df_encoded.drop(columns=[dependent_variable]))"
+    "Then, define the dependent variable and add a constant column for the intercept term.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 11,
+   "id": "3c503a89",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y = df_encoded[dependent_variable]\n",
+    "\n",
+    "X = sm.add_constant(df_encoded.drop(columns=[dependent_variable]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bed1e33c",
+   "metadata": {},
+   "source": [
+    "Run the regression and print out the results."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "id": "caabaa89",
    "metadata": {},
    "outputs": [],
@@ -475,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 13,
    "id": "f9b7fccf",
    "metadata": {},
    "outputs": [
@@ -488,8 +619,8 @@
       "Dep. Variable:     Mean Adult Female Literacy Rate (%)   R-squared:                       0.892\n",
       "Model:                                             OLS   Adj. R-squared:                  0.758\n",
       "Method:                                  Least Squares   F-statistic:                     6.627\n",
-      "Date:                                 Mon, 22 May 2023   Prob (F-statistic):             0.0454\n",
-      "Time:                                         10:05:38   Log-Likelihood:                -39.965\n",
+      "Date:                                 Tue, 23 May 2023   Prob (F-statistic):             0.0454\n",
+      "Time:                                         10:34:17   Log-Likelihood:                -39.965\n",
       "No. Observations:                                   10   AIC:                             91.93\n",
       "Df Residuals:                                        4   BIC:                             93.75\n",
       "Df Model:                                            5                                         \n",
@@ -521,6 +652,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3dffa4aa",
+   "metadata": {},
+   "source": [
+    "## Interpreting the results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "39c4748e",
    "metadata": {},
    "source": [
@@ -535,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 14,
    "id": "a4df3666",
    "metadata": {},
    "outputs": [
@@ -579,8 +718,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "93c82480",
+   "metadata": {},
+   "source": [
+    "## Visualising the results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a7c04c50",
+   "metadata": {},
+   "source": [
+    "Predict values based on our model."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 15,
    "id": "b088c4fd",
    "metadata": {},
    "outputs": [
@@ -592,7 +747,7 @@
        "        98.94990435,  78.54576597])"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -604,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 16,
    "id": "89ed5a10",
    "metadata": {},
    "outputs": [
@@ -624,7 +779,7 @@
        "Name: Mean Adult Female Literacy Rate (%), dtype: float64"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -635,8 +790,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fbd92898",
+   "metadata": {},
+   "source": [
+    "Create a new dataset with predicted and actual values of Mean Adult Female Literacy Rate."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 17,
    "id": "d680adc6",
    "metadata": {},
    "outputs": [],
@@ -645,8 +808,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7843a93e",
+   "metadata": {},
+   "source": [
+    "Sort based on the values so that the plot looks better."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 19,
    "id": "f24f6301",
    "metadata": {},
    "outputs": [
@@ -755,7 +926,7 @@
        "9  Korea, Dem. People's Rep.  99.997612   78.545766"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -766,8 +937,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1b0b5502",
+   "metadata": {},
+   "source": [
+    "Plot the observed vs predicted values."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 20,
    "id": "60a79b60",
    "metadata": {},
    "outputs": [
@@ -783,7 +962,6 @@
     }
    ],
    "source": [
-    "# Plotting the observed vs predicted values\n",
     "plt.plot(data_sorted['Country'], data_sorted['Actual'], color='green', marker='o', label='Observed')\n",
     "plt.plot(data_sorted['Country'], data_sorted['Predicted'], color='orange', marker='o', label='Predicted')\n",
     "\n",
@@ -796,9 +974,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "eeff4e53",
+   "metadata": {},
+   "source": [
+    "Comparing the observed and predicted values visually allows to assess the performance of our model. The overall pattern is captured well, despite the increased volatility, suggesting that the model provides useful insights and predictions. However, we see that in some cases the deviation is significant from the actual value which indicates limitations or deficiencies in the model."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ebaa2f5",
+   "id": "36beb52d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -826,4 +1012,3 @@
  "nbformat": 4,
  "nbformat_minor": 5
 }
-
