Added more markdown notes to the read json file.

--- a/Income level Json .ipynb
+++ b/Income level Json .ipynb
@@ -2,6 +2,35 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "14b8f7c4",
+   "metadata": {},
+   "source": [
+    "Living conditions are a contributory factor to the rate of education children and young adults receive today. Inequalities exist which determine how wealthy and educated a country can be. \n",
+    "One variable to consider when looking at female literacy rate is the income levels of different countries."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d1286816",
+   "metadata": {},
+   "source": [
+    "### Income Classifications\n",
+    "\n",
+    "The World Bank assigns world economies to four income groups based on Gross National Income(GNI) per capita in current USD.\n",
+    "\n",
+    "\n",
+    "|Group | July 1, 2021 (new) | July 1, 2020 (old) |\n",
+    "|-------|-------|--------|\n",
+    "|Low income | < 1,045 | < 1,035 |\n",
+    "|Lower-middle income | 1,046 – 4,095 | 1,035 – 4,045 |\n",
+    "|Upper-middle income | 4,096 -12,695 | 4,046 -12,535 |\n",
+    "|High income | > 12,695 | > 12,535 |\n",
+    "\n",
+    "[ source ](https://blogs.worldbank.org/opendata/new-world-bank-country-classifications-income-level-2021-2022)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "38cd0cf1",
    "metadata": {},
    "source": [
@@ -4394,7 +4423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "id": "e0a32a70",
    "metadata": {},
    "outputs": [
@@ -4492,13 +4521,14 @@
        "260                       Chad           Low income"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Rename 'name'col to 'Country Name'and incomeLevel using a list\n",
+    "# This makes matching countries easier.\n",
     "\n",
     "new_inc_df_cols = ['Country Name', 'Income Level']\n",
     "\n",
@@ -4687,6 +4717,14 @@
     "merged_df = cm_copy.merge(new_inc_df, on=['Country Name'])\n",
     "\n",
     "merged_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5df89fcf",
+   "metadata": {},
+   "source": [
+    "The results in the table above, show that countries with the lowest female literacy rate are all grouped as low income countries except for Korea Dem.People's Rep.."
    ]
   },
   {
