--- a/jupyter-notebooks-data-files/7.regression-results.ipynb
+++ b/jupyter-notebooks-data-files/7.regression-results.ipynb
@@ -808,7 +808,7 @@
    "source": [
     "The plotted OLS regression lines further support the observation that only the variable Median Female Child Marriage Rate has a substantial descriptive impact on the dependent variable. The plots for Mean Government Education Expenditure Rate and Mean GPI show that these variables do not have significant independent descriptive power.\n",
     "\n",
-    "In the plot for Median Female Child Marriage Rate we can observe a clear linear relationship between this variable and the dependent variable. The LS regression line indicates a negative trend, suggesting that as the median female child marriage rate increases, the dependent variable tends to decrease. This implies that changes in the median female child marriage rate have a descriptive influence on the dependent variable.\n",
+    "In the plot for Median Female Child Marriage Rate we can observe a clear linear relationship between this variable and the dependent variable. The regression line indicates a negative trend, suggesting that as the median female child marriage rate increases, the dependent variable tends to decrease. This implies that changes in the median female child marriage rate have a descriptive influence on the dependent variable.\n",
     "\n",
     "However, in the plots for Mean Government Education Expenditure Rate and Mean GPI, we do not observe a noticeable or meaningful pattern in the relationship with the dependent variable. The LS regression lines appear to be nearly flat with wider confidence bands, indicating that changes in these variables do not have a strong descriptive impact on the dependent variable.\n",
     "\n",
