spelling mistake fix

--- a/jupyter-notebooks-data-files/7.regression-results.ipynb
+++ b/jupyter-notebooks-data-files/7.regression-results.ipynb
@@ -764,7 +764,7 @@
    "id": "e1ec6815",
    "metadata": {},
    "source": [
-    "Now, create subplots for OLS regression line plots of independent variables, excluding Income level, which is categorical. List the variables to plot and show the plots."
+    "Now, create subplots for regression line plots of independent variables, excluding Income level, which is categorical. List the variables to plot and show the plots."
    ]
   },
   {
@@ -806,7 +806,7 @@
    "id": "5ca3b4fc",
    "metadata": {},
    "source": [
-    "The plotted regression lines further support the observation that only the variable Median Female Child Marriage Rate has a substantial descriptive impact on the dependent variable. The plots for Mean Government Education Expenditure Rate and Mean GPI show that these variables do not have significant independent descriptive power.\n",
+    "The plotted regression lines further support the observation that only the variable Median Female Child Marriage Rate has a substantial descriptive impact on the dependent variable. The plots for Mean Government Education Expenditure Rate and Mean GPI show that these variables have a less significant independent descriptive power.\n",
     "\n",
     "In the plot for Median Female Child Marriage Rate we can observe a clear linear relationship between this variable and the dependent variable. The regression line indicates a negative trend, suggesting that as the median female child marriage rate increases, the dependent variable tends to decrease. This implies that changes in the median female child marriage rate have a descriptive influence on the dependent variable.\n",
     "\n",
