updated project log, fixed spelling mistakes

--- a/jupyter-notebooks-data-files/1.adult-female-literacy-dc.ipynb
+++ b/jupyter-notebooks-data-files/1.adult-female-literacy-dc.ipynb
@@ -3126,7 +3126,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From the .describe(), it Looks like there are some countries that have **only** null values. We should probably remove these when we clean the data. <br>\n",
+    "From the .describe(), it looks like there are some countries that have **only** null values. We should probably remove these when we clean the data. <br>\n",
     "The mean values seem to vary a lot; Afganistan's mean is 19.81%, however Samoa's mean is 99.20%.\n"
    ]
   },
@@ -3480,8 +3480,8 @@
    "metadata": {},
    "source": [
     "Some countries such as Timor-Leste and Zambia have a high dispersal of data, however other countries such as Belgium and Liberia have values that are not very dispersed. <br>\n",
-    "The dispersal of values varies a lot per country <br>\n",
-    "Little countries are right-skewed; where there is skewness, most countries are left-skewed.<br>\n",
+    "The dispersal of values varies a lot per country. <br>\n",
+    "The type of skewness varies across countries.<br>\n",
     "Lots of countries are not skewed as they have a relatively symmetrical distribution.<br>\n",
     "Considering that the dataset has a large amount of values and that there are a lot of countries within the dataset, there doesn't appear to be that many outliers. <br>\n",
     "Adult female literacy rate values vary considerably between countries. \n"
