--- a/jupyter-notebooks-data-files/2.child-marriage-dc.ipynb
+++ b/jupyter-notebooks-data-files/2.child-marriage-dc.ipynb
@@ -2414,7 +2414,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It looks like most of our target countries have a high spread of data."
+    "It looks like most of our target countries have a relatively high spread of data.\n",
+    "Chad is right-skewed."
    ]
   },
   {
@@ -2736,7 +2737,7 @@
    "metadata": {},
    "source": [
     "We could fill in the gaps with the median of the region that the country is situated within (i.e., use the median child marriage rate within Sub-Saharan Africa for Niger). <br>\n",
-    "This is our best bet as there are no more literacy datasets online to fill in the nulls. "
+    "This is our best bet as (to the best of our knowledge) there are no more literacy datasets online to fill in the nulls. "
    ]
   },
   {
@@ -2938,7 +2939,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can now replace the NaNs with region's mean value. <br>"
+    "We can now replace the NaNs with the region's mean value. <br>"
    ]
   },
   {
