--- a/jupyter-notebooks-data-files/3.income-level-api-dc .ipynb
+++ b/jupyter-notebooks-data-files/3.income-level-api-dc .ipynb
@@ -3,6 +3,15 @@
   {
    "attachments": {},
    "cell_type": "markdown",
+   "id": "12552d73",
+   "metadata": {},
+   "source": [
+    "# Income Levels API and Data Cleaning"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
    "id": "14b8f7c4",
    "metadata": {},
    "source": [
@@ -39,7 +48,7 @@
    "source": [
     "We read in the income levels for different countries through rapid api. \n",
     "This has been converted into a json file as it initially loads as xml file.\n",
-    "to change this, we added the '?format=json' at the end of the url to download as a json file"
+    "To change this, we added the '?format=json' at the end of the url to download as a json file"
    ]
   },
   {
