--- a/jupyter-notebooks-data-files/4.share-of-education-in-govtexp-dc.ipynb
+++ b/jupyter-notebooks-data-files/4.share-of-education-in-govtexp-dc.ipynb
@@ -6,7 +6,7 @@
    "id": "d06db8f2",
    "metadata": {},
    "source": [
-    "# Share of education in government expenditure\n",
+    "# Share of Education in Government Expenditure Data Cleaning\n",
     "\n",
     "## Plan of Action\n",
     "\n",
